--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -4,6 +4,9 @@ body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   background-image: url(../img/bg-noise.webp);
 }
+body * {
+  color: #bdbdbd;
+}
 
 ul {
   padding: 0;
@@ -17,6 +20,45 @@ a {
 
 .header {
   position: relative;
+}
+
+.button, .menu > div:last-of-type {
+  height: 40px;
+  border: 1px solid rgb(179, 179, 179);
+  border-radius: 30px;
+  display: flex;
+  overflow: hidden;
+  position: relative;
+}
+.button > span, .menu > div:last-of-type > span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 100%;
+  border-radius: 50%;
+  color: black;
+  background-color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 0;
+  left: -5px;
+}
+.button > span::after, .menu > div:last-of-type > span::after {
+  content: "→";
+  transform: rotate(-45deg);
+  display: block;
+}
+.button > a, .menu > div:last-of-type > a {
+  width: 80%;
+  height: 100%;
+  color: white;
+  text-transform: capitalize;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 0;
 }
 
 .menu {
@@ -39,45 +81,6 @@ a {
   width: 100%;
   height: 100%;
 }
-.menu > div:last-of-type {
-  height: 60%;
-  border: 1px solid rgb(179, 179, 179);
-  border-radius: 30px;
-  display: flex;
-  overflow: hidden;
-  position: relative;
-}
-.menu > div:last-of-type > span {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 100%;
-  border-radius: 50%;
-  color: black;
-  background-color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 0;
-  left: -5px;
-}
-.menu > div:last-of-type > span::after {
-  content: "→";
-  transform: rotate(-45deg);
-  display: block;
-}
-.menu > div:last-of-type > a {
-  width: 80%;
-  height: 100%;
-  color: white;
-  text-transform: capitalize;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  right: 0;
-}
-
 .menuMobile {
   position: fixed;
   top: 0;
@@ -302,12 +305,47 @@ a {
   font-size: 2rem;
   line-height: 50px;
 }
-.studio > div > div:nth-of-type(2) > figure, .studio > div > div:last-of-type > figure {
+.studio > div > div:nth-of-type(2) > figure,
+.studio > div > div:last-of-type > figure {
   width: 100%;
 }
-.studio > div > div:nth-of-type(2) > figure > img, .studio > div > div:last-of-type > figure > img {
+.studio > div > div:nth-of-type(2) > figure > img,
+.studio > div > div:last-of-type > figure > img {
   width: 100%;
 }
 .studio > div > div:nth-of-type(2) {
   margin-top: 80px;
+}
+
+.numbers > div > div > p {
+  color: #bdbdbd;
+  font-size: 1.2rem;
+}
+
+.questions > div div .button, .questions > div div .menu > div:last-of-type {
+  border: 1px solid palevioletred;
+}
+.questions > div div .button > span, .questions > div div .menu > div:last-of-type > span {
+  background-color: palevioletred;
+}
+.questions > div div ul {
+  height: 200px;
+}
+.questions > div div ul > li {
+  height: 20%;
+  font-size: 1.1rem;
+  font-weight: lighter;
+  background-color: rgba(255, 255, 255, 0.03);
+  cursor: pointer;
+  position: relative;
+}
+.questions > div div ul > li > span {
+  font-size: 0.7rem;
+  transform: rotate(-90deg);
+}
+.questions > div div ul > li > div {
+  height: 0;
+  display: none;
+  font-size: 0.9rem;
+  transition: 0.4s;
 }/*# sourceMappingURL=style.css.map */
